# csfd-scraper

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/csfd-core/: Cargo.toml  README.md
crates/csfd-core/examples/: live_test.rs  multi_test.rs
crates/csfd-core/src/: client.rs  error.rs  lib.rs  scraper.rs  types.rs
crates/csfd-core/src/parser/: episodes.rs  mod.rs  search.rs  series.rs
crates/csfd-tauri/: Cargo.toml  README.md
crates/csfd-tauri/src/: commands.rs  lib.rs
