[workspace]
resolver = "2"
members = [
    "crates/csfd-core",
    "crates/csfd-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ČSFD Scraper Contributors"]
license = "MIT"
repository = "https://github.com/example/csfd-scraper"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }

# HTML parsing
scraper = "0.22"
regex-lite = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Testing
proptest = "1.5"
wiremock = "0.5"

# Tauri
tauri = "2.0"
