[package]
name = "csfd-tauri"
description = "Tauri integration for ČSFD Scraper"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["csfd", "tauri", "czech", "movies"]
categories = ["gui"]

[dependencies]
csfd-core = { path = "../csfd-core", version = "0.1.0" }
tauri = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
